--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -46,6 +46,7 @@
 		"escape-regexp": "0.0.1",
 		"estree-walker": "3.0.3",
 		"eventemitter3": "5.0.1",
+		"fix-webm-duration": "^1.0.5",
 		"idb-keyval": "6.2.1",
 		"insert-text-at-cursor": "0.3.0",
 		"is-file-animated": "1.0.2",
